--- a/drv/transceivers-server/Cargo.toml
+++ b/drv/transceivers-server/Cargo.toml
@@ -11,6 +11,7 @@ drv-sidecar-front-io = { path = "../sidecar-front-io", features = ["transceivers
 drv-sidecar-seq-api = { path = "../sidecar-seq-api" }
 drv-transceivers-api = { path = "../transceivers-api" }
 ringbuf = { path = "../../lib/ringbuf" }
+task-net-api = { path = "../../task/net-api" }
 userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
 
 cfg-if = { workspace = true }
@@ -18,6 +19,9 @@ idol-runtime = { workspace = true }
 num-traits = { workspace = true }
 stm32h7 = { workspace = true }
 zerocopy = { workspace = true }
+
+[features]
+vlan = ["task-net-api/vlan"]
 
 [build-dependencies]
 build-util = { path = "../../build/util" }
