--- a/drv/transceivers-api/Cargo.toml
+++ b/drv/transceivers-api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 idol-runtime = { workspace = true }
 num-traits = { workspace = true }
 serde = { workspace = true }
+transceiver-messages = { workspace = true }
 zerocopy = { workspace = true }
 
 derive-idol-err = { path = "../../lib/derive-idol-err" }
