--- a/drv/transceivers-server/Cargo.toml
+++ b/drv/transceivers-server/Cargo.toml
@@ -10,6 +10,7 @@ drv-i2c-devices = { path = "../i2c-devices" }
 drv-sidecar-front-io = { path = "../sidecar-front-io", features = ["transceivers", "leds"] }
 drv-sidecar-seq-api = { path = "../sidecar-seq-api" }
 drv-transceivers-api = { path = "../transceivers-api" }
+mutable-statics = { path = "../../lib/mutable-statics" }
 ringbuf = { path = "../../lib/ringbuf" }
 task-net-api = { path = "../../task/net-api" }
 userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
@@ -18,6 +19,7 @@ cfg-if = { workspace = true }
 idol-runtime = { workspace = true }
 num-traits = { workspace = true }
 stm32h7 = { workspace = true }
+transceiver-messages = { workspace = true }
 zerocopy = { workspace = true }
 
 [features]
