--- a/drv/transceivers-server/Cargo.toml
+++ b/drv/transceivers-server/Cargo.toml
@@ -16,6 +16,7 @@ task-net-api = { path = "../../task/net-api" }
 userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
 
 cfg-if = { workspace = true }
+hubpack = { workspace = true }
 idol-runtime = { workspace = true }
 num-traits = { workspace = true }
 stm32h7 = { workspace = true }
