--- a/task/monorail-server/Cargo.toml
+++ b/task/monorail-server/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+drv-monorail-api = { path = "../../drv/monorail-api"  }
 drv-sidecar-front-io = { path = "../../drv/sidecar-front-io", features = ["phy_smi"], optional = true }
 drv-sidecar-seq-api = { path = "../../drv/sidecar-seq-api", optional = true }
 drv-spi-api = { path = "../../drv/spi-api" }
 drv-stm32xx-sys-api = { path = "../../drv/stm32xx-sys-api", features = ["family-stm32h7"] }
 drv-user-leds-api = { path = "../../drv/user-leds-api", optional = true  }
 idol-runtime = { workspace = true }
-monorail-api = { path = "../../drv/monorail-api"  }
 ringbuf = { path = "../../lib/ringbuf"  }
 task-net-api = { path = "../net-api", optional = true }
 userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
