--- a/drv/transceivers-server/Cargo.toml
+++ b/drv/transceivers-server/Cargo.toml
@@ -21,6 +21,7 @@ idol-runtime = { workspace = true }
 num-traits = { workspace = true }
 stm32h7 = { workspace = true }
 transceiver-messages = { workspace = true }
+zerocopy = { workspace = true }
 
 [features]
 vlan = ["task-net-api/vlan"]
