--- a/drv/ignition-api/Cargo.toml
+++ b/drv/ignition-api/Cargo.toml
@@ -7,18 +7,16 @@ edition = "2021"
 bitfield = { workspace = true }
 cfg-if = { workspace = true }
 derive_more = { workspace = true }
-idol-runtime = { workspace = true, optional = true }
+idol-runtime = { workspace = true }
 num-derive = { workspace = true }
 num-traits = { workspace = true }
 zerocopy = { workspace = true }
 
 derive-idol-err = { path = "../../lib/derive-idol-err" }
-drv-fpga-api = { path = "../fpga-api", optional = true }
-userlib = { path = "../../sys/userlib", optional = true }
+drv-fpga-api = { path = "../fpga-api" }
+userlib = { path = "../../sys/userlib" }
 
 [build-dependencies]
-idol = { workspace = true, optional = true }
-
-[features]
-default = ["idol-client"]
-idol-client = ["drv-fpga-api", "idol", "idol-runtime", "userlib"]
+build-fpga-regmap = { path = "../../build/fpga-regmap" }
+build-util = { path = "../../build/util" }
+idol = { workspace = true }
